<resources>
    <string name="app_name">Dynamic Display Test</string>

    <string name="action_about">About</string>
    <string name="action_default">Set Default Hz</string>
    <string name="action_hide_system">Hide System Apps</string>
    <string name="action_search">Search</string>

    <string name="default_set">Currently set to default refresh rate</string>
    <string name="default_hz">Default</string>
    <string name="sixty_hz">60 Hz</string>
    <string name="ninety_six_hz">96 Hz</string>
    <string name="one_twenty_hz">120 Hz</string>

    <string name="save">Save</string>
    <string name="reset">Reset preference?</string>

    <string name="permission_adb_button">ADB Permission</string>
    <string name="permission_acc_button">Accessibility</string>
    <string name="permission_missing_both">ADB permission is not granted and Accessibility Service is not enabled. Please click an option to finish setup.</string>
    <string name="permission_missing_adb">ADB permission is not granted. Please click below to finish setup.</string>
    <string name="permission_missing_acc">Accessibility Service is not enabled. Please click below to finish setup.</string>
    <string name="permission_acc_toast">Click "Installed services", then enable Dynamic Display service</string>
    <string name="acc_description">Dynamic Display monitors the currently running app to change the display refresh rate per user settings</string>

    <string name="qs_title">Refresh Rate</string>

    <string name="valid_devices_warning_title">Device May Be Incompatible</string>
    <string name="valid_devices_warning">Dynamic Display is designed for use on the following devices only: \n\n%1$s\n\n Your device is: %2$s</string>
    <string name="valid_devices_dont_warn_again">Don\'t warn me again</string>
    <string-array name="valid_devices_display_names">
        <item>Samsung Galaxy S20 (SM-G980x)</item>
        <item>Samsung Galaxy S20 5G (SM-G981x)</item>
        <item>Samsung Galaxy S20+ (SM-G985x)</item>
        <item>Samsung Galaxy S20+ 5G (SM-G986x)</item>
        <item>Samsung Galaxy S20 Ultra 5G (SM-G988x)</item>
        <item>Samsung Galaxy Note20 Ultra (SM-N986x)</item>
    </string-array>
    <string-array name="valid_devices_model_numbers">
        <item>SM-G980</item> <!-- S20 -->
        <item>SM-G981</item> <!-- S20 5G -->
        <item>SM-G985</item> <!-- S20+ -->
        <item>SM-G986</item> <!-- S20+ 5G -->
        <item>SM-G988</item> <!-- S20 Ultra 5G -->
        <item>SM-N986</item> <!-- Note20 Ultra -->
    </string-array>

    <string name="about_version">Version %1$s</string>
    <string name="about_github">View Source Code on GitHub</string>
    <string name="about_update">An update is available</string>
    <string name="about_update_more_info">More Info</string>
    <string name="about_update_version">New version: %1$s</string>
    <string name="about_update_download">Download Update</string>
</resources>
