<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher"
        />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        tools:text="@string/app_name"
        />

    <TextView
        android:id="@+id/default_set_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/default_set"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="3"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/default_set_text">

        <Button
            android:id="@+id/toggle_60hz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sixty_hz"
            android:layout_weight="1"
            style="?attr/materialButtonOutlinedStyle"
            />

        <Button
            android:id="@+id/toggle_120hz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one_twenty_hz"
            android:layout_weight="1"
            style="?attr/materialButtonOutlinedStyle"
            />

        <Button
            android:id="@+id/toggle_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_hz"
            android:layout_weight="1"
            style="?attr/materialButtonOutlinedStyle"
            />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_group"
        />

</androidx.constraintlayout.widget.ConstraintLayout>