<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="144dp"
        android:layout_height="144dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="48dp"
        android:src="@mipmap/ic_launcher"
        />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="18dp"
        android:gravity="center"
        tools:text="Version 0.4.1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        />

    <Button
        android:id="@+id/github_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="18dp"
        android:text="@string/about_github"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    <TextView
        android:id="@+id/update_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/github_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="48dp"
        android:text="@string/about_update"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        />

    <TextView
        android:id="@+id/update_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/update_available"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        tools:text="New version: 0.5.0"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        />

    <Button
        android:id="@+id/update_download_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/update_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="18dp"
        android:text="@string/about_update_download"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/update_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="update_available,update_version,update_download_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>